--- a/docs/02.typescript.md
+++ b/docs/02.typescript.md
@@ -9,15 +9,15 @@ guided by the two following links:
 - [Nuxt-ts helloworld](https://codesandbox.io/s/github/nuxt/nuxt.js/tree/dev/examples/typescript)
 - [Hackernews on nuxt-ts](https://github.com/nuxt-community/hackernews-nuxt-ts)
 
-### Adding Nuxt-ts
+### Adding Nuxt/typescript
+
+Make sure you're not using `nuxt-ts` package as this is now deprecated
 
 ```sh
-yarn add nuxt-ts
-yarn add --dev nuxt-property-decorator
-yarn remove nuxt
+yarn add -D @nuxt/typescript nuxt-property-decorator
 ```
 
-- `nuxt-ts` is TypeScript counterpart of `nuxt`
+- `@nuxt/typescript` is TypeScript extension for `nuxt`
 - [`nuxt-property-decorator`](https://github.com/nuxt-community/nuxt-property-decorator/) is
   Nuxt counter part of [`vue-property-decorator`](https://github.com/kaorun343/vue-property-decorator)
 
